[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fonts/GuiFont/HackbotFont_sub_header.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/GUI/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 788.0
margin_top = 416.0
margin_right = 1131.0
margin_bottom = 664.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 241.0
rect_pivot_offset = Vector2( -3488, -1035 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_right = 329.0
margin_bottom = 234.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 329.0
margin_bottom = 162.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "
   Pause Menu  
"

[node name="ContinueButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 329.0
margin_bottom = 186.0
text = "Continue"

[node name="LeaveLevelButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 329.0
margin_bottom = 210.0
text = "Leave Level"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 329.0
margin_bottom = 234.0
text = "Quit"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LeaveLevelButton" to="." method="_on_LeaveLevelButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
